# SecuServe-Module-opencv

./: DEBUGSECUSERVE.sh  README.md  StartSecuServe.sh  debug.out  dev.sh  env.sh  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: codesee-arch-diagram.yml
SecuServe-Module-opencv/: __main__.py  imports.py
SecuServe-Module-opencv/pipeline/: faceDataStruture.py  knnClasifiyer.py  livenessFaceClassififyer.py  pipelineStates.py  state.py  userStats.py  videoRequired.py  videoThread.py
SecuServe-Module-opencv/tests/: config.py  test_config.py  test_face_data_structure.py  test_face_reconiton_status_checker.py  test_knn_clasifiyer.py
SecuServe-Module-opencv/util/: configcreator.py  consoleLog.py  const.py  database.py  distanceCalulation.py  faceDataStruture.py  recvmessage.py
data/: Config.ini
data/testTraining/: Face.Model  test.model
docs/: Docs.md  buildnotes.md  myflow.gv
tests/: PipeLineTest.py  __init__.py  const.py  test_PipeLineTest.py  test_config.py  test_face_data_structure.py  test_knn_clasifiyer.py
video-processing-src/: __init__.py
videoprocessingsrc/: __init__.py  __main__.py  consoleLog.py  const.py  database.py  enums.py  faceDataStruture.py  imports.py  knnClasifiyer.py  networkBackend.py  pipelineStates.py  recvmessage.py  run.py  state.py  testlauch.py  userStats.py  videoRequired.py  videoThread.py
videoprocessingsrc/pipeline/: knnClasifiyer.py  pipelineStates.py  state.py  userStats.py  videoRequired.py  videoThread.py
videoprocessingsrc/util/: consoleLog.py  const.py  database.py  recvmessage.py
