[tool.poetry]
name = "secuserve-module-opencv"
version = "0.1.0"
description = "the Facial Reconition part of the SecuServe Security system"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]
license = "Apatche"

[tool.poetry.dependencies]
python = "^3.8"
zmq = "^0.0.0"
face-recognition = "^1.3.0"
pycopy-shutil = "^0.1"
SQLAlchemy = "^1.4.25"
pathlib = "^1.0.1"
configparser = "^5.0.2"
numpy = "^1.21.2"
colorama = "^0.4.4"
wget = "^3.2"

[tool.poetry.dev-dependencies]
python = "3.8"
zmq = "^0.0.0"
face-recognition = "^1.3.0"
pycopy-shutil = "^0.1"
SQLAlchemy = "^1.4.25"
pathlib = "^1.0.1"
configparser = "^5.0.2"
numpy = "^1.21.2"
colorama = "^0.4.4"
wget = "^3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
