[tool.poetry]
name = "secuserve-module-opencv"
version = "0.1.0"
description = "The facial reconition module of the SecuServe Secuirty System"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# github / local builds 

#face-recognition = {git="https://github.com/ageitgey/face_recognition.git",branch = "master" }
#opencv={ path = "/home/nicky/Downloads/opencv-4.5.1/bild/python_loader/cv2/",develop = false }
#dlib ={ path= "/usr/local/lib/python3.8/dist-packages/dlib-19.22.0-py3.8-linux-x86_64.egg/dlib"}

colorama = "^0.4.4"
pathlib = "^1.0.1"
wget = "^3.2"
SQLAlchemy = "^1.4.25"
configparser = "^5.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
