[tool.poetry]
name = "secuserve-module-opencv"
version = "0.1.0"
description = "The facial reconition module of the SecuServe Secuirty System"
authors = ["NicholasBlackburn1 <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# python package 
colorama = "^0.4.4"
pathlib = "^1.0.1"
wget = "^3.2"
SQLAlchemy = "^1.4.25"
configparser = "^5.0.2"
opencv-python = "^4.5.3"
face-recognition = "^1.3.0"
zmq = "^0.0.0"
requests = "^2.26.0"
sklearn = "^0.0"
black = "^21.9b0"
pytest = "^6.2.5"
mock = "^4.0.3"


[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
